# mplib

./: .gitignore  README.md  pyproject.toml
mplib/: shoonya.py  utils.py  vectorised_backtest.py
mplib/broker/: broker.py  session.py  ticker.py
mptradelib/: backtest.py  feed.py  livetrade.py  livetrading.py  test_renko.py  utils.py  vectorised_backtest.py
mptradelib/broker/: broker.py  session.py  shoonya.py  ticker.py
mptradelib/cli/: new.py
mptradelib/cli/templates/strategy/: __init__.py.jinja  backtest.ipynb.jinja  code.py.jinja
mptradelib/optimizers/: __init__.py  walkforward.py
mptradelib/templates/strategy/: __init__.py.jinja  backtest.ipynb.jinja  backtest.jinja  livetrade.py  livetrade.py.jinja
mptradelib/utils/: __init__.py  chart.py  downloader.py  simulated_trades.py  tearsheet.py  utils.py
mptradelib/widgets/: daterangepicker.py
