[tool.poetry]
name = "mptradelib"
version = "0.5.3"
description = ""
authors = ["Abhilash Nanda <wishabhilash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.7.1"
requests = "2.31.0"
fyers-apiv3 = "3.0.6"
retry = "0.9.2"
pyotp = "2.9.0"
jinja2 = "^3.1.3"
click = "^8.1.7"
jinja2-strcase = "^0.0.2"
redis = "^5.0.4"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

pandas_ta = { version = "^0.3.14b", optional = true }
pandas = { version = "^2.1.4", optional = true }
hyperopt = { version = "^0.2.7", optional = true }

[tool.poetry.extras]
pandasta = ["pandas_ta"]
pandas = ["pandas"]
hyperopt = ["hyperopt"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mpt = 'mptradelib.cli.new:commands'